edit code due to linters